[package]
name = "pis-aller"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
crossbeam-queue = "0.3.12"
serde = { version = "1.0.218", features = ["derive"] }
standard-error = {git = "ssh://git@github.com/AriaBagheri/standard-error-rs.git", package = "standard-error", rev = "d957219319bdf36e0dba43b617fd2f748ee9a9d9"}
tokio = {version = "1.43.0", features = ["rt-multi-thread", "sync", "fs", "time", "macros"] }
uuid = { version = "1.14.0", features = ["v4"] }
